# cloudpolicy-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cloudpolicy-ai/: README.md
cloudpolicy-ai/.github/workflows/: ci.yml
cloudpolicy-ai/cloudpolicy_ai/: __init__.py  cli.py  parser.py
cloudpolicy-ai/cloudpolicy_ai/rules/: base.py  cloud_sql.py  firewall.py  iam.py  labels.py  storage.py
cloudpolicy-ai/examples/vulnerable-gcp-infra/: main.tf
cloudpolicy_ai/: report.py  scanner.py  vertex_explainer.py
cloudpolicy_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gcp_compliance_scanner/: __init__.py  cli.py  report.py  scanner.py  vertex_explainer.py
gcp_compliance_scanner/rules/: base.py  cloud_sql.py  firewall.py  iam.py  labels.py  storage.py
tests/: test_cli.py  test_parser.py  test_rules.py  test_scanner.py
tests/fixtures/: simple.tf
